--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,7 @@
     <title>{% block title %}Student QR System{% endblock %}</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/static/style.css">
+    <a href="/scanned_qr_codes" class="btn">View Scan History</a>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
@@ -34,6 +35,9 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('dashboard') }}">Dashboard</a>
+                     <li class="nav-item">
+        <a class="nav-link" href="{{ url_for('saved_qr_codes') }}">Saved QR Codes</a>
+    </li>
                     </li>
                     {% endif %}
                 </ul>
@@ -78,4 +82,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     {% block scripts %}{% endblock %}
 </body>
-</html>
+</html> 
+
+ 
+
+ 
