--- a/templates/saved_qr_codes.html
+++ b/templates/saved_qr_codes.html
@@ -1,22 +1,17 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Saved QR Codes</title>
-    <link rel="stylesheet" href="/static/style.css">
-</head>
-<body>
-    <div class="container">
-        <h1>Saved QR Codes</h1>
-        <a href="/" class="btn">Back to Home</a>
-        
-        <div class="qr-grid">
-            {% for qr_file in qr_files %}
-            <div class="qr-item">
-                <img src="{{ url_for('get_qr', filename=qr_file) }}" alt="QR Code">
-                <p>{{ qr_file }}</p>
-            </div>
-            {% endfor %}
+{% extends "base.html" %}
+
+{% block content %}
+<div class="container">
+    <h1>Saved QR Codes</h1>
+    <a href="/" class="btn">Back to Home</a>
+    
+    <div class="qr-grid">
+        {% for student in students %}
+        <div class="qr-item">
+            <img src="{{ url_for('get_qr', filename=student['qr_code']) }}" alt="QR Code">
+            <p>{{ student['name'] }} ({{ student['student_id'] }})</p>
         </div>
+        {% endfor %}
     </div>
-</body>
-</html>
+</div>
+{% endblock %}
